# microevents

./: .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: README.md  index.html
src/microevents/: __init__.py  core.py  event_bus.py
tests/: test_core.py  test_event_bus.py
